Bug 145233 - EDITING DOCX track changes: show moved text in different color/formatting instead of showing as plain deletion and insertion
Summary: EDITING DOCX track changes: show moved text in different color/formatting ins...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.6.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 inReleaseNotes
Keywords: filter:docx
Depends on:
Blocks: Track-Changes-Lists 145718
  Show dependency treegraph
 
Reported: 2021-10-20 08:00 UTC by NISZ LibreOffice Team
Modified: 2022-11-25 13:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word with move marking (15.71 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-10-20 08:01 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer and Word (11.39 KB, image/png)
2021-10-20 08:02 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-20 08:00:04 UTC
Description:
When tracking changes to list items, the marking is different from MSO.

Steps to Reproduce:
1.	Open attached file
2.	Move a list element

Actual Results:
Move of marking is not visible.

Expected Results:
In Word it is on the same marking.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9bcdfcb74dae7ccd07be7159c0e1deba110d2a6f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 1 NISZ LibreOffice Team 2021-10-20 08:01:48 UTC
Created attachment 175845 [details]
Example file from Word with move marking
Comment 2 NISZ LibreOffice Team 2021-10-20 08:02:39 UTC
Created attachment 175846 [details]
Screenshot of the problem in Writer and Word
Comment 3 László Németh 2021-10-20 08:24:47 UTC
This is an usability and interoperability problem not only for list elements, but moved sentences, re-ordered paragraphs, etc.

Note: because drag & drop of selected words or sentences within paragraphs uses a heuristics for automatic space deletion/insertion, resulting different position of the space (e.g. deleted before the text, but inserted after the text), showing text movement must ignore terminating spaces.
Comment 4 László Németh 2021-10-20 10:37:49 UTC
tdf#145233 sw track changes: show moved text in green color

and with double strikethrough or underlines during
change tracking to speed up reviewing, e.g. re-ordered
list elements or changed paragraph or sentence order
is more visible this way.

Note: skip terminating white spaces of the changes
during recognition of the text movement, as a
workaround for a typical difference resulted by
e.g. Writer UX: selecting a sentence or a word, and
moving it with the mouse, Writer removes a space at
the deletion to avoid double spaces, also inserts a
space at the insertion point automatically. Because
the result can be different (space before and space
after the moved text), compare the changes without
terminating spaces.

See also commit bcdebc832b272662d28035007a4796e42d1305ae
"tdf#104797 DOCX change tracking: handle moveFrom and moveTo".
Comment 5 Commit Notification 2021-10-20 10:38:03 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ec577f566fa3e6d2666069180f8ec8474054aea9

tdf#145233 sw track changes: show moved text in green color

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2021-11-04 09:49:31 UTC
Verified in:
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: c7500945fc5d5bd2130a2d38be0bd4b15445cd90
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 7 stragu 2021-12-29 22:25:32 UTC
Just testing on Ubuntu 18.04, and checking release notes.

Confirmed the bug in:

Version: 7.0.6.2
Build ID: 00(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Ubuntu package version: 1:7.0.6-0ubuntu0.18.04.1_lo1
Calc: threaded

And verified the fix as showing a drag-and-drop list element move highlighted in green (two actions in Manage Changes, akin to cut and paste, instead of a deletion + addition previously):

Version: 7.3.0.1 / LibreOffice Community
Build ID: 840fe2f57ae5ad80d62bfa6e25550cb10ddabd1d
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded